--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "gatsby": "^2.0.76",
+    "gatsby-plugin-styled-components": "^3.0.4",
     "react": "^16.5.1",
-    "react-dom": "^16.5.1"
+    "react-dom": "^16.5.1",
+    "styled-components": "^4.1.3"
   },
   "repository": {
     "type": "git",
