--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "gatsby": "^2.0.76",
     "gatsby-plugin-styled-components": "^3.0.4",
+    "gatsby-source-filesystem": "^2.0.12",
+    "gatsby-transformer-json": "^2.1.6",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "styled-components": "^4.1.3"
