--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "gatsby-transformer-json": "^2.1.6",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "uuid": "^3.3.2"
   },
   "repository": {
     "type": "git",
